# ftd

./: CMakeLists.txt  GGPConfig.cmake.in  README.md  herk_vs_tcc.sh  hopper_voltbf_gemm_optimization_report.md
benchmark_results/: CUTLASS_vs_CUBLAS_Report.md
cutlass_interface/: CMakeLists.txt  README.md  bench_gemm_production.cu  bench_herk_precision.cu  benchmark_configs.cu  benchmark_configs_sm100.cu  build_sweep_sm120.sh  build_sweep_sm90.sh  cmake_install.cmake  cutlass_gemm_api.cu  cutlass_gemm_api.h  example_usage.cu  example_usage_sm100.cu  find_best_flags.sh  gemm_blockscaled_dispatch.cu  gemm_blockscaled_dispatch.h  gemm_complex_fp8.hpp  gemm_complex_sm100.hpp  gemm_sm100_type_chains.hpp  pipelining_throughput_report.md  pipelining_throughput_report.txt  strategy_cache.hpp  sweep_triangle_sm100.cu  system_info.hpp  test_fp6_batched.cu  test_gemm_api.cu  test_herk_int4.cu  test_precision_accuracy.cu  test_tune_api.cu  tune_cache.hpp
cutlass_interface/gemm_complex_fp8/: api_impl.hpp  buffers.hpp  cast_kernels.hpp  config.hpp  dispatch_impl.hpp  herk_impl.hpp  herk_kernel.hpp  pack_kernels.hpp  triangle_impl.hpp  type_chains.hpp
cutlass_interface/gemm_complex_sm100/: api_impl.hpp  buffers.hpp  cast_kernels.hpp  config.hpp  dispatch_impl.hpp  fp4_kernels.hpp  fp6_kernels.hpp  herk_impl.hpp  herk_kernel.hpp  int4_kernels.hpp  mxfp_kernels.hpp  pack_kernels.hpp  triangle_impl.hpp
cutlass_interface/reports/: c7510_wgmma_serialization_report.md  dsa2000_vs_dsa110_voltage_beamformer.md  warp_specialized_herk_report.md
cutlass_interface/shared/: buffers_common.hpp  cast_kernels_common.hpp  config_common.hpp  gemm_kernel_common.hpp  herk_kernel_common.hpp  mbarrier_helpers.hpp  pack_kernels_common.hpp
dedisp_tcfdd/: CMakeLists.txt  README.md  bench_fdd.sh  bench_transpose_kernels.cu  benchmark_sweep.sh  cmake_install.cmake  dedisp_api.cu  dedisp_api.h  fdmt_perfect.cpp  gpu_fdd_improved.cu  performance_study.md  test_dedisp_api.cu
dedisp_tcfdd/gpu_fdd_improved/: application_impl.hpp  config.hpp  fft_store_callback.cu  host_helpers.hpp  kernels_candidate.hpp  kernels_data_prep.hpp  kernels_fdd.hpp  pipeline_class.hpp  pipeline_impl.hpp  reversibility_test.hpp
doc/: CMakeLists.txt
examples/: CMakeLists.txt
include/: array.h  communicator_ggp.h  complex_ggp.h  complex_ggp_orig.h  dedisp_interface.h  device.h  dsa.h  float_vector.h  ggp_api.h  ggp_arch.h  ggp_ptr.h  kernel_helper.h  object.h  register_traits.h  tcc_interface.h  util_ggp.h  voltage_pipeline.h
include/kernels/: compute_weights.cuh  dsa110_specific.cuh  inspect_dev_elems.cuh  power_sum_transpose.cuh  promote_data.cuh  reorder_data.cuh  scale_vector.cuh  sum_incoherent_beam.cuh  sum_inner_chan_time.cuh  transpose_filterbank.cuh  tri_from_herm.cuh  visibility_bf.cuh
include/targets/generic/: reduce_helper.h  shared_memory_cache_helper.h
lib/: CMakeLists.txt  bench_pipeline.cu  check_params.h  comm_common.cpp  communicator_mpi.cpp  communicator_single.cpp  communicator_stack.cpp  corner_turn.cu  cutlass_interface.cu  dedisp_interface.cpp  dedispersion_ggp.cpp  dsa110_specific.cu  filterbank.cpp  ggp_ptr.cpp  imaging_pipeline.cu  inspect_dev_elems.cu  interface_ggp.cpp  interleave_tri.cu  monitor.cpp  pipeline_arrays.cpp  power_sum_transpose.cu  promote_data.cu  reduce_helper.cu  reorder_data.cu  scale_vector.cu  sum_incoherent_beam.cu  sum_inner_chan_time.cu  tcc_interface.cu  test_imaging.cu  test_pipeline_dedisp.cu  timer.cpp  transpose_filterbank.cu  tri_from_herm.cu  tune.cpp  util_ggp.cpp  visibility_array.cpp  visibility_bf.cpp  visibility_bf_kernels.cu  visibility_pipeline.cu  voltage_array.cpp  (+4 more)
lib/generate/: nvtx.w
lib/interface/: CMakeLists.txt  blas_interface.cpp
lib/targets/cuda/: CMakeLists.txt  blas_lapack_cublas.cpp  comm_target.cpp  device.cpp  ggp_api.cpp  malloc.cpp  target_cuda.cmake
lib/targets/generic/: CMakeLists.txt
make_filterbanks/: Makefile  README  make_test_fil.c  read_header.c
nvidia_benchmark_scripts/cufft_bench/: 1d_r2c_c2r_bench.cpp  1d_r2c_c2r_example.cpp  2d_c2r_r2c_bench.cpp  Makefile  make_plots.sh  plot_template.p  runner.sh  scraper.sh
nvidia_benchmark_scripts/cutlass_bench/: cutlass_build.sh~  cutlass_profiler_bench.sh  spot_test.sh
production_samples/casm/: casm_bfCorr.cu
production_samples/dsa110/: Makefile  dsaX_bfCorr.cu
reports/: gpu_performance_prediction.md  pipeline_benchmark_report.txt
scripts/: BENCHMARK_README.md  cutlass_gemm_strategy_cache_sm120_allcfg_fp6k128_fp4k256_bs128x128_stg3_vec.txt  cutlass_herk_strategy_cache_sm120_allcfg_fp6k128_fp4k256_bs128x128_stg3_vec.txt  cutlass_kernel_cache_sm120_allcfg_fp6k128_fp4k256_bs128x128_stg3_vec.txt  model_validation.csv  parse_benchmarks.sh  parse_nsys_profiles.sh  predict_performance.py  predicted_performance.csv  predicted_stages.csv  run_benchmarks.sh  run_nsys_profile.sh
scripts/bench_results_GB10/: pipelined.csv  stages.csv  summary.csv
scripts/bench_results_GB200/: stages.csv
scripts/bench_results_GH200/: pipelined.csv  summary.csv
tests/: CMakeLists.txt  beamformer_test.cpp  beamformer_test_dsa110.cpp  beamformer_test_gtest.hpp  blas_interface_test.cpp  blas_interface_test_gtest.hpp  c_interface_test.c  cutlass_cublas_benchmark.cpp  cutlass_cublas_benchmark_gtest.hpp  dedisp_interface_gtest.hpp  dedisp_interface_test.cpp  fx_corr_test.sh  scale_vector_example.cpp  test.h  tune_test.cpp  visibility_pipeline_test.cpp  voltage_pipeline_test.cpp  xengine_test.cpp  xengine_test_gtest.hpp
tests/host_reference/: CMakeLists.txt  blas_reference.cpp
tests/utils/: CMakeLists.txt  command_line_params.cpp  command_line_params.h  host_utils.cpp  host_utils.h  misc.cpp  misc.h
